refactor: 주문 생성 시 장바구니 검증 기능 수정